@@ -133,7 +133,8 @@ function(..., list = character(0L), package = NULL, lib.loc = NULL,
                 ## more than one candidate
                 o <- match(fileExt(files), dataExts, nomatch = 100L)
                 paths0 <- dirname(files)
-                paths0 <- factor(paths0, levels=paths0)
+		## Next line seems unnecessary to MM (FIXME?)
+		paths0 <- factor(paths0, levels= unique(paths0))
                 files <- files[order(paths0, o)]
             }
             if(length(files)) {
